App Router Implementation

--- a/mta.yaml
+++ b/mta.yaml
@@ -1,7 +1,7 @@
 _schema-version: '3.1'
 ID: mypoapp
 version: 1.0.0
-description: "A simple CAP project."
+description: A simple CAP project.
 parameters:
   enable-parallel-deployments: true
 build-parameters:
@@ -18,13 +18,28 @@ modules:
     build-parameters:
       builder: npm
     provides:
-      - name: srv-api # required by consumers of CAP services (e.g. approuter)
+      - name: srv-api
         properties:
-          srv-url: ${default-url}
+          srv-url: '${default-url}'
     requires:
       - name: mypoapp-db
       - name: mypoapp-auth
-
+  - name: mypoapp-ui
+    type: nodejs
+    path: app
+    parameters:
+      buildpack: nodejs_buildpack
+    build-parameters:
+      builder: npm
+    requires:
+      - name: srv-api
+        group: destinations
+        properties:
+          name: srv-api
+          strictSSL: true
+          forwardAuthToken: true
+          url: '~{srv-url}'
+      - name: mypoapp-auth
   - name: mypoapp-db-deployer
     type: hdb
     path: gen/db
@@ -32,7 +47,6 @@ modules:
       buildpack: nodejs_buildpack
     requires:
       - name: mypoapp-db
-
 resources:
   - name: mypoapp-db
     type: com.sap.xs.hdi-container
@@ -46,5 +60,5 @@ resources:
       service-plan: application
       path: ./xs-security.json
       config:
-        xsappname: mypoapp-${org}-${space}
+        xsappname: 'mypoapp-${org}-${space}'
         tenant-mode: dedicated
